# human_pose_estimation

./: .gitignore  .pre-commit-config.yaml  MY_NOTES.md  Makefile  PROJECT_PLAN.md  PROJECT_PLAN_DETAILED.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: base.py  coco_adapter.py  densepose_adapter.py  download.py
eval/: metrics.py  runner.py  viz.py
notebooks/: comparison_table.py  plot_per_joint_pck.py  visualize_pipeline.py  visualize_samples.py
pose/: joints.py  parts.py  refine.py  skeleton.py
results/: eval_oracle.json  segformer.json
segmentation/: __init__.py  base.py  segformer.py
tests/: conftest.py  test_base.py  test_joints.py  test_metrics.py  test_parts.py  test_runner.py  test_segformer.py  test_segmentation.py  test_skeleton.py  test_viz.py
